<resources>
    <string name="app_name">Number_Increment_Decrement_App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="tv1Text">Number:</string>
    <string name="et1Hint">Enter Value</string>
    <string name="subtractOne"> -1 </string>
    <string name="addOne">+1</string>
    <string name="reset">Reset Number</string>
</resources>
